--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: java
 before_install:
  - chmod +x gradlew
 
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
 addons:
     srcclr:
         debug: true
