Jacoco enable reports

--- a/build.gradle
+++ b/build.gradle
@@ -10,25 +10,10 @@ repositories {
     mavenCentral()
 }
 
-task codeCoverageReport(type: JacocoReport) {
-
-    // Gather execution data from all subprojects
-    // (change this if you e.g. want to calculate unit test/integration test coverage separately)
-    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
-
-    // Add all relevant sourcesets from the subprojects
-    subprojects.each {
-        sourceSets it.sourceSets.main
-    }
-
+jacocoTestReport {
     reports {
-        xml {
-            enabled true
-            destination "${buildDir}/reports/jacoco/jacoco.xml"
-        }
-        html.enabled true
-        html.destination "${buildDir}/reports/jacoco"
-        csv.enabled false
+        xml.enabled true
+        html.enabled false
     }
 }
 
